<resources>
    <string name="app_name">Pocket Cinema</string>

    <string name="txt_audience">Audience</string>
    <string name="txt_admin">Admin</string>
    <string name="txt_want_to_join_us">Want to Join Us?</string>
    <string name="txt_register_here">Register Here</string>
    <string name="txt_register">Register</string>
    <string name="txt_login">Login</string>
    <string name="txt_director">Director</string>
    <string name="txt_genre">Genre</string>
    <string name="txt_update">Update</string>
    <string name="txt_users_list">Users List</string>
    <string name="txt_tickets_list">Tickets List</string>
    <string name="option_update_profile">Update Profile</string>
    <string name="glass">Glass</string>
    <string name="glass_director">Security guard David Dunn uses his supernatural abilities to track Kevin Wendell Crumb, a disturbed man who has twenty-four personalities.</string>
    <string name="bumblebee">Bumblebee</string>
    <string name="bumblebee_description">On the run in the year of 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken.</string>
    <string name="escape_room">Escape Room</string>
    <string name="escape_room_description">Six strangers find themselves in a maze of deadly mystery rooms, and must use their wits to survive.</string>
    <string name="replicas">Replicas</string>
    <string name="replicas_description">A scientist becomes obsessed with bringing back his family members who died in a traffic accident.</string>
    <string name="the_mule">The Mule</string>
    <string name="the_mule_description">A 90-year-old horticulturist and Korean War veteran is caught transporting $3 million worth of cocaine through Illinois for a Mexican drug cartel.</string>

    <string name="confirm">Confirm Ticket</string>
    <string name="cancel">Cancel Ticket</string>

    <string name="time1">12:50 PM</string>
    <string name="time2">02:15 PM</string>
    <string name="time3">04:45 PM</string>
    <string name="time4">06:50 PM</string>
    <string name="time5">08:50 PM</string>

    <string name="ticket_adult">Adult Tickets: </string>
    <string name="ticket_children">Children Tickets: </string>

    <string-array name="number_of_tickets">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>


    <string name="hint_username">Username</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_address">Address</string>
    <string name="hint_city">City</string>
    <string name="hint_postal_code">Postal Code</string>
    <string name="text_book_ticket">CONFIRM YOUR TICKET</string>
    <string name="error_message_username">Enter Username</string>
    <string name="error_message_first_name">Enter First Name</string>
    <string name="error_message_last_name">Enter Last Name</string>
    <string name="error_message_email">Enter Valid Email </string>
    <string name="error_message_phone_number">Enter Valid Phone Number</string>
    <string name="error_message_password">Password must be more than 8 characters</string>
    <string name="error_message_address">Enter Valid Address</string>
    <string name="error_message_city">Enter Valid City</string>
    <string name="error_message_postal_code">Enter Valid PostalCode</string>
</resources>


