<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="fitCenter"
        android:src="@drawable/pocket_cinema_logo_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/Shade"
            android:textColorHint="@color/Shade"
            android:textSize="18sp"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/Shade"
            android:textColorHint="@color/Shade"
            android:typeface="monospace" />

        <RadioGroup
            android:id="@+id/roleGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/audience_radio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:checked="true"
                android:elevation="3dp"
                android:padding="10dp"
                android:text="@string/txt_audience"
                android:textAlignment="center"
                android:textColor="@color/radio_text_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="monospace" />

            <RadioButton
                android:id="@+id/admin_radio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/radio_button_background"
                android:button="@android:color/transparent"
                android:elevation="3dp"
                android:padding="10dp"
                android:text="@string/txt_admin"
                android:textAlignment="center"
                android:textColor="@color/radio_text_color"
                android:textSize="14sp"
                android:textStyle="bold"
                android:typeface="monospace" />
        </RadioGroup>

        <Button
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="15dp"
            android:layout_marginTop="200dp"
            android:background="@drawable/white_button_rectangle"
            android:elevation="30dp"
            android:gravity="center"
            android:onClick="GoNext"
            android:padding="10dp"
            android:text="@string/txt_login"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/button_text_color"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="monospace" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="@string/txt_want_to_join_us"
            android:textAlignment="textEnd"
            android:textColor="@color/Shade"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:onClick="GoNext"
            android:text="@string/txt_register_here"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>